// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should show correctly with a custom image 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="./coffee-mug.png"
/>
`;

exports[`ProductImage should show the component with the product's image 1`] = `
<div
  className="productCard undefined"
  id="1"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
